GNOME Bugzilla – Bug 699739
GtkSettings fails to read uint properties from settings.ini
Last modified: 2013-05-06 12:29:23 UTC
Unfortunately certain GtkSettings properties are of type G_TYPE_UINT. Adding them to settings.ini results in: Gtk-Message: (for origin information, set GTK_DEBUG): failed to retrieve property `gtk-entry-password-hint-timeout' of type `guint' from rc file value "((GString*) 0x256c1a0)" of type `guint' This is with gtk+ 3.8.1 Have a patch, building gtk+
Created attachment 243373 [details] [review] gtksettings: Fix loading of uint settings
Review of attachment 243373 [details] [review]: sure
Attachment 243373 [details] pushed as ed1edda - gtksettings: Fix loading of uint settings Pushed to git master. Okay to backport to gtk-3-8 and other relevant branches?