gtksettings: Fix loading of uint settings

https://bugzilla.gnome.org/show_bug.cgi?id=699739